MyCss/FolioStyle.css
/* ... */
.WrapPoint >  p > .warn {
  position: absolute;
  color: #ffab23;
  font-size: 1vmax;
  margin-bottom: 0vmax;
  bottom: 0vmax;
  opacity: 0;
  animation: scalesZ 2s cubic-bezier(.03,1.03,.54,.99) forwards infinite alternate, opacityes2 1s ease forwards;
  animation-delay: 11.5s, 11s;
}

/* SKILL EXPLAINING */
.Bars > .WrapMsPText{
  top: 0;
  display: none;
  left: 0;
  font-size: 1vmax;
  margin: 55vh 15vw;
  background-color: black;
  width: 20em;
  z-index: 1000;
  position: absolute;
  border: 0px solid red;
}
.Bars > .WrapMsPText > .MsPText {
  color: white;
/*  display: none;*/
  position: absolute;
  background-color: black;
  top: 5%;
  left: 0;
  margin-left: 0%;
  font-weight: bold;
}
.m6iBaerO {
  display: block;
  color: white;
  float: right;
  margin: 2vmax 2em;
  /* position: absolute;*/
 /*  border-radius: 100%;*/
   filter: none;
   font-weight: bolder;
   font-size: 2vmax;
  /* bottom: 7vh;*/
  /* left: 7vw;*/
   z-index: 10001;
   text-shadow: 0vw 0.50vw 0.50vmax #54cade;
}










/*
// SECTION | CONTENT //
//Text about Me 
//Certificate
//Education
*/
section {
  margin: 0;
  background: #000000;
  grid-area: content;
}

.aboutMe {
 /*border: 1px solid rgb( 255,100,250);*/
  height: 15vmax;
  overflow: scroll;
  scrollbar-width: none;
  /* tambahkan vendor prefix untuk browser lama */
  -ms-overflow-style: none; /* IE 10+ */
  scrollbar-color: transparent; /* Firefox */    
  margin-top: 3%;
}
.aboutMe>h5 {
  position: relative;
  color: white;
  font-size: 2vmax;
  top: 0;
  left: -50%;
  animation: left2Right 1s ease-in-out forwards;
  animation-delay: 1s;
 
}
.aboutMe>h5>.borderBottom {
  border-bottom: 0vmax solid white;
  animation: left2Right2 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55)
  forwards;
  animation-delay: 2s;
}
.textAboutWrap {
  position: relative;
  /*border: 1px solid black;*/
  width: 90%;
}
.text {
  position: absolute;
  color: #fff;
  font-family: fantasy;
  opacity: 0%;
  font-size: 1vmax;
  justify-content: flex-start;
  margin-top: 0vh;
  animation: textOpacity 2.9s ease forwards;
  animation-delay: 2.4s;
}
.rightLine {
  position: relative;
}

/*
//PROJECTCONTENT//
//my Project
//CV Project//
*/
.ProjectWrap{
  position: relative;
  overflow: scroll;
  scrollbar-width: none;
  /* tambahkan vendor prefix untuk browser lama */
  -ms-overflow-style: none; /* IE 10+ */
  scrollbar-color: transparent; /* Firefox */  
/*  border: 1px solid green;*/
  height: 20vh;
  margin-top: 3%;
}

.projectCation {
  position: absolute;
  font-size: 2vmax;
  margin-top: -30%;
  color: white;
  top: 0;
  left: 0;
  border-bottom: 0vmax solid white;
  text-shadow: 0.2vmax 0.2vmax 1vmax red;
  animation: marginmove 1s ease-in-out forwards, bordermove 1.5s ease-out
  forwards;
  animation-delay: 2s, 3s;
}
.horisonLine{
  position: absolute;
  border: 1vw solid #9ed9e3;
  width: 3%;
  right: 0%;
  top: 0%;
  margin-top: 4vh;
  padding-right: 0%;
  opacity: 0;
  animation: lineRight 1.5s cubic-bezier(0.68, -0.55, 0.265, 1.55)
  forwards;
  animation-delay: 0.9s;
}
.myCv {
  position: relative;
  margin-top: 8vh;
  /*border: 1px solid white;*/
  width: 30vw;
  height: 0vh;
  top: 0;
  margin-left: 2%;
  left: 0;
  opacity: 0;
  animation: myCvMotion 1s ease-out forwards, opacityes2 0.9 ease-in forwards;
  animation-delay: 2s, 2s;
}
.CVs {
  background-size: 100% auto;
  background-repeat: no-repeat;
}
.cvtextWrp {
  position: relative;
  display: flex;
 /*border: 1px solid green;*/
  width: 45%;
  height: auto;
  float: right;
  justify-content: flex-start;
  bottom: 100%;
  margin-right: 5%;
}
.CVsText {
  position: absolute;
  color: white;
  font-size: 1vmax;
  font-family: monospace;
  opacity: 0;
  animation: opacityes2 0.5s ease forwards;
  animation-delay: 3s;
}
/*
//Project Picture JavaScript set//
//Button|Picture//
*/
.m6iBaero2 {
  color: white;
   position: absolute;
   border-radius: 100%;
   filter: none;
   font-weight: bolder;
   font-size: 2vmax;
   bottom: 7vh;
   left: 70vw;
   z-index: 1000;
   text-shadow: 1vw 0.80vw 1vmax #54cade;
}
.Projectimg {
   display: none;
   position: absolute;
   filter: none;
   top: 0;
   z-index: 109;
   transform: scale(0%);
   margin: 40% -8%;
   width: 55%;
   height: auto;
   animation: scales 0.5s ease forwards;
 }




/*
//My Certificate//
//right line horisontal
//Border background with picture
*/
.CERTIFICATEWrap {
  overflow-X: hidden;
  overflow-y: scroll;  
  display:flex;
  position: relative;
  margin-top: 3%;
 /* border: 1px solid white;*/
  height: 30%;
  gap: 10;
}

.Certify {
  position: absolute;
  font-size: 2vmax;
  color: #fff;
  left: -40%;
  top: 0;
  font-weight: bold;
  font-family: monospace;
  text-shadow: 0px 0px 0px  black;
  animation: leftSetify 1s ease-out forwards, shadowleft 2.5s ease-in forwards;
  animation-delay: 3s, 3.5s;
}
/* TAMBAHKAN BORDER BOTTOM YAH! */
.lineCertify {
  position: absolute;
  top: 15%; 
  margin-top: 2%;
  right: 101%;
  border: 1vw solid #fff;
  background-color: #fff;
  padding-left: 35%;
  opacity: 1;
  height: 1%;
  animation: lineCerifyLeft 0.5s ease-out forwards, paddinfLine 0.5s ease-in-out
  forwards, opacityLineCerify 0.5s ease-out forwards, backnormal 0.50s ease-in forwards, opacityOut 1s ease forwards;
  animation-delay: 4s, 4.3s, 4.5s, 5s, 5.2s;
}
.borderCertify {
    border-bottom: 0vmax solid white; 
    animation: bordermove 0.5s ease-out forwards;
  animation-delay: 6s;
}
.vertikalLine {
  position: absolute;
  border: 0.3vh solid #9ed9e3;
  border-top: transparent;
  /*border-top-left-radius: 100%;
  border-top-right-radius: 100%;*/
  right: 50%;
  margin-top: 10%;
  width: 0%;
  opacity: 0;
  height: 0vh;
  animation: verticalDown 1.5s ease-in forwards;
  animation-delay: 2.1s;
  
}
/* ... */

